# docassemble-MAJudgmentSatisfied

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MAJudgmentSatisfied/data/questions/: petition_to_deem_satisfied_labeled.yml
projects/petition/: .gitignore  LICENSE  README.md  petition_to_deem_satisfied.yml  setup.py
