license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MAJudgmentSatisfied"
version = "0.0.1"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Samuel Darkwa", email = "sam.darkwa@su.suffolk.edu" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
